k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging

---

apiVersion: v1
kind: Namespace
metadata:
  name: metrics
