k8s/kafka-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-broker
  name: kafka-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  strategy: {}
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      containers:
        - image: apache/kafka:4.1.0
          name: kafka-broker
          ports:
            - containerPort: 9092
            - containerPort: 9093
