k8s/kafka-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-ui
  name: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  strategy: {}
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - image: ghcr.io/kafbat/kafka-ui:v1.4.2
          name: kafka-ui
status: {}
