k8s/main-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: main-service
  name: main-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-service
  strategy: {}
  template:
    metadata:
      labels:
        app: main-service
    spec:
      containers:
        - image: snds_prfct/main-service:0.1
          name: main-service
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
