k8s/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notification-service
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  strategy: {}
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - image: snds_prfct/notification-service:0.1
          name: notification-service
status: {}
