k8s/recommendation-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recommendation-service
  name: recommendation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation-service
  strategy: {}
  template:
    metadata:
      labels:
        app: recommendation-service
    spec:
      containers:
        - image: snds_prfct/recommendation-service:0.1
          name: recommendation-service
status: {}
