k8s/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-ui
  name: kafka-ui
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app: kafka-ui
  type: NodePort
status:
  loadBalancer: {}
