k8s/main-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: main-service
  name: main-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: main-service
  type: NodePort
status:
  loadBalancer: {}
