k8s/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notification-service
  name: notification-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: notification-service
  type: ClusterIP
status:
  loadBalancer: {}
