k8s/recommendation-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: recommendation-service
  name: recommendation-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: recommendation-service
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recommendation-service
  name: recommendation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation-service
  strategy: {}
  template:
    metadata:
      labels:
        app: recommendation-service
      annotations:
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
        - image: snds_prfct/recommendation-service:0.1
          name: recommendation-service
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          resources:
            requests:
              cpu: "250m"
              memory: "200M"
            limits:
              cpu: "500m"
              memory: "500M"
