k8s/system-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-ingress
  labels:
    group: microservices
    system: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: recommendation-system.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-service
                port:
                  number: 8080
